version 0.2: 
  - Fixed booting on Palm T|T3 (Marek Vasut)

version 0.1:
  - Initial release