@@ -13,3 +13,4 @@ UInt32 call_arm(ArmStack *stack, UInt32 func);
 UInt32 get_linux_mach_id();
 char *get_mach_name();
 void SetFieldTextFromStr(FieldPtr fldP, char *strP, Boolean redraw);
+void open_console();
